Revisado con código comentado

--- a/Python/modulo-1-ejercicio-10-clases.ipynb
+++ b/Python/modulo-1-ejercicio-10-clases.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Empleados:\n",
+    "class Empleados:  #Definimos el constructor de la clase empleados para poder utilizar los parámetros en funciones posteriores. \n",
     "    def __init__(self, nombre, apellido, edad, posicion_en_empresa, año_entrada, dias_total_vacaciones, herramientas_trabajo):\n",
     "        self.nombre=nombre.upper()\n",
     "        self.apellido=apellido\n",
