--- a/Python/modulo-1-ejercicio-11-ficheros.ipynb
+++ b/Python/modulo-1-ejercicio-11-ficheros.ipynb
@@ -291,10 +291,10 @@
     "def lectura_txt(nombre_ext, lectura, enconding, contenido): \n",
     "    direccion=os.listdir() \n",
     "    if nombre_ext not in direccion:\n",
-    "        with open (nombre_ext, 'x') as nuevo_fichero:\n",
+    "        with open (nombre_ext, 'x') as nuevo_fichero:  # x es el mode para poder escribir en un documento (sobreescribiendo)\n",
     "            nuevo_fichero.write(contenido)\n",
     "            nuevo_fichero.close()\n",
-    "        with open(nombre_ext, 'r') as lectura_nuevo_fichero:\n",
+    "        with open(nombre_ext, 'r') as lectura_nuevo_fichero: # r es el mode para poder leer un archivo\n",
     "            lectura_nuevo_fichero.read()\n",
     "    elif nombre_ext in direccion:\n",
     "        y_n= input('¿Quieres sobreescribir el fichero? Y/N')\n",
@@ -306,7 +306,9 @@
     "                lectura_fichero_sobreescrito.read()\n",
     "                lectura_fichero_sobreescrito.close()\n",
     "        elif y_n == 'N':\n",
-    "            pass"
+    "            pass\n",
+    "\n",
+    "# si no escribimos los modes que deseamos, no podremos ni escribir ni leer el fichero que indicamos. "
    ]
   },
   {
@@ -342,13 +344,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import xml.etree.ElementTree as ET\n",
+    "import xml.etree.ElementTree as ET  #Importamos la librería para lectura de archivos xml\n",
     "\n",
     "def funcion_archivo_xml(archivo_xml):\n",
     "    peliculas_xml = ET.parse('peliculas.xml')\n",
     "    raiz = peliculas_xml.getroot()\n",
     "\n",
-    "    print('TAGS Y ATRIBUTOS')\n",
+    "    print('TAGS Y ATRIBUTOS')  # Con estos for loops, conseguimos que printee por pantalla los nombres en orden de las relaciones en arbol de los elementos del fichero.\n",
     "    for child in raiz:\n",
     "        print(f'{child.tag}: Es un hijo de la raíz: {raiz.tag}')\n",
     "    for subchild in child:\n",
@@ -360,7 +362,7 @@
     "\n",
     "    print('--------------------------------')\n",
     "    \n",
-    "    for child in raiz:\n",
+    "    for child in raiz:    #con estos for loops, conseguimos obtener los atributos de cada elemento del arbol\n",
     "        print(f'{child.attrib}: Es un atributo de mi child')\n",
     "    for subchild in child:\n",
     "        print(f'{subchild.attrib}: Es un atributo de {child.tag}')\n",
@@ -371,7 +373,7 @@
     "\n",
     "    print('DESCRIPTION AND TITLE')   \n",
     "    \n",
-    "    for element in raiz:\n",
+    "    for element in raiz:   #Aquí necesitamos movernos con el for loop al último elemento de nuestro arbol para poder obtener la información. De esta manera, puede buscar por todo el fichero.\n",
     "        for child in element:\n",
     "            for subchild in child:\n",
     "                print('title:', subchild.attrib['title'])\n",
@@ -443,7 +445,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.8.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -457,12 +459,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "bab9de067d915f107d1ee2ee6fc66eaa4419a4d622bcbfdabd1c6ae75445c121"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
