--- a/Python/modulo-1-ejercicio-12-regex.ipynb
+++ b/Python/modulo-1-ejercicio-12-regex.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re"
+    "import re   #Importamos la librería que contiene las expresiones regulares."
    ]
   },
   {
@@ -197,12 +197,12 @@
     }
    ],
    "source": [
-    "info_remitente = str(re.findall('From:.*',email))\n",
+    "info_remitente = str(re.findall('From:.*',email))  \n",
     "info_remitente\n",
     "\n",
     "nombre_remitente= '\\\"[^\\\"]+\\\"' \n",
     "\n",
-    "info_nombre_remitente = re.findall(nombre_remitente,info_remitente)\n",
+    "info_nombre_remitente = re.findall(nombre_remitente,info_remitente)  #Necesitamos usaer findall para poder obtener más de un resultado en los match.\n",
     "info_nombre_remitente"
    ]
   },
@@ -384,7 +384,9 @@
    ],
    "source": [
     "dict_email={'email':info_nombre_remitente, 'date': info_dia_email.group(), 'nombre':info_nombre_remitente,'asunto':info_asunto_email.group()}\n",
-    "dict_email"
+    "dict_email\n",
+    "\n",
+    "#No hace falta añadir el método gorup en todos, porque en algunos de los resultados necesitamos más de un resultado, y el match con search () solo nos devuelve uno."
    ]
   },
   {
@@ -407,7 +409,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.9 64-bit",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -421,12 +423,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "7ad202eda4b463b15866ae6aadf94c3d2752d74520fedda13d68ef6e8aba5314"
    }
   }
  },
