--- a/Python/modulo-1-ejercicio-13-sql_python.ipynb
+++ b/Python/modulo-1-ejercicio-13-sql_python.ipynb
@@ -1285,7 +1285,7 @@
     "\n",
     "\n",
     "import mysql.connector\n",
-    "import pandas as pd\n",
+    "import pandas as pd  #Importamos esta library para poder ibtener los resultados en un Dataframe\n",
     "\n",
     "cnx = mysql.connector.connect(user='root', password='AlumnaAdalab',\n",
     "                              host='127.0.0.1',\n",
@@ -1544,7 +1544,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.8.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1558,12 +1558,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "bab9de067d915f107d1ee2ee6fc66eaa4419a4d622bcbfdabd1c6ae75445c121"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
