comentarios de evaluación

--- a/Python/modulo-1-ejercicio-10-clases.ipynb
+++ b/Python/modulo-1-ejercicio-10-clases.ipynb
@@ -46,7 +46,7 @@
     "    def calculo_vacaciones(self):\n",
     "        vacaciones_input=int(input(\"Cuántos días te has ido de vacaciones este año\"))\n",
     "        input_deseo_vacaciones=int(input(\"¿Cuántos días te quieres ir\"))\n",
-    "        dias_total_vacaciones=self.dias_total_vacaciones\n",
+    "        dias_total_vacaciones=self.dias_total_vacaciones #revisar\n",
     "        if dias_total_vacaciones - vacaciones_input == 0:\n",
     "            return \"Ya no te quedan vacaciones\"\n",
     "        elif (dias_total_vacaciones - vacaciones_input) > input_deseo_vacaciones :\n",
