--- a/Python/modulo-1-ejercicio-11-ficheros.ipynb
+++ b/Python/modulo-1-ejercicio-11-ficheros.ipynb
@@ -291,7 +291,7 @@
     "def lectura_txt(nombre_ext, lectura, enconding, contenido): \n",
     "    direccion=os.listdir() \n",
     "    if nombre_ext not in direccion:\n",
-    "        with open (nombre_ext, 'x') as nuevo_fichero:  # x es el mode para poder escribir en un documento (sobreescribiendo)\n",
+    "        with open (nombre_ext, 'x') as nuevo_fichero:  # x es el mode para poder crear\n",
     "            nuevo_fichero.write(contenido)\n",
     "            nuevo_fichero.close()\n",
     "        with open(nombre_ext, 'r') as lectura_nuevo_fichero: # r es el mode para poder leer un archivo\n",
